<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D0000"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dropgrade.dropgrade.MainActivity" >

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:text="@string/forgot_pw"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:background="#2A2929"
        android:contentDescription="@string/username"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="text"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/usernameLogin"
        android:layout_alignStart="@+id/Welcome"
        android:layout_below="@+id/usernameLogin"
        android:layout_marginTop="30dp"
        android:background="#2A2929"
        android:contentDescription="@string/password"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="text|textPassword"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/button1"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/forgot_pw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/clickHere" />

</RelativeLayout>