<!--  Layout for creating an account. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gradecalculator.MainActivity"
    tools:ignore="MergeRootFrame"
    android:background="#012060" >

    <!--  Holds the future username. -->
   <EditText
        android:id="@+id/username_placeholder"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:hint="@string/username_placeholder"
        android:layout_below="@id/icon"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
	   	android:layout_marginRight="10dp"
	   	android:layout_marginLeft="10dp"
	   	android:layout_marginTop="30dp" />

	<!--  Password field. -->
   <EditText
       android:id="@+id/password_placeholder"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"    
       android:textColor="#FFF"  
       android:singleLine="true"
       android:hint="@string/password_placeholder"
       android:inputType="textPassword"
	   android:layout_centerHorizontal="true"
	   android:layout_below="@id/username_placeholder"
	   android:layout_marginRight="10dp"
	   android:layout_marginLeft="10dp" />
	   <!--  Confirm password field. -->
	  <EditText
       android:id="@+id/confirm_placeholder"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:textColor="#FFF" 
       android:singleLine="true"    
       android:hint="@string/confirm_placeholder"
       android:inputType="textPassword"
	   android:layout_centerHorizontal="true"
	   android:layout_below="@id/password_placeholder"
	   android:layout_marginRight="10dp"
	   android:layout_marginLeft="10dp" />
    
      <!--  Button to sign up. -->
  	<Button
       android:id="@+id/signUp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginRight="10dp"
	   android:layout_marginLeft="10dp" 
	   android:layout_marginTop="20dp" 
       android:text="@string/signUp" 
       android:gravity="center"
       android:textColor="#F3F3F3"
       android:background="@drawable/button_item"
       android:layout_below="@id/confirm_placeholder"/>
    
</RelativeLayout>