<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginRight="5dp"
              android:layout_marginEnd="5dp"
              android:id="@+id/item_layout"
              android:weightSum="10">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/title"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="6"/>


    <TextView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="2.5"
        android:text="@string/number"
        android:textSize="20sp" />
    
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/image"
        android:src="@drawable/delete_icon" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/itemID"
        android:textSize="0sp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"/>
    
</LinearLayout>
