<!--  Layout of the dialog for editing a grade. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.gradecalculator.MainActivity"
    tools:ignore="MergeRootFrame"
    android:background="#4F7EB9">

    
    <TextView 
	    android:id="@+id/editGradeTitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/editGradeTitle"
	    android:textSize="25sp"
	    android:background="#5FFF"
	    android:textColor="#ECECEC"
	  	android:paddingTop="10dp"
	    android:paddingLeft="10dp"/>
   <!--  View to edit the name. -->
   <EditText
        android:id="@+id/addGradeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addGradeName"
        android:layout_below="@id/editGradeTitle"
        android:layout_centerHorizontal="true"
	   	android:layout_marginRight="10dp"
	   	android:layout_marginLeft="10dp"
	   	android:layout_marginTop="10dp" />
	   
   		<LinearLayout
   		    android:orientation="horizontal"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_below="@id/addGradeName"
   		    android:id="@+id/valuesContainer">
			<!--  Views to get the grade percentage. -->
			<EditText
			       android:id="@+id/topNumber"
			       android:layout_width="0dp"
			       android:layout_weight=".23"
			       android:layout_height="50dp"
				   android:layout_marginRight="2dp"
				   android:layout_marginLeft="2dp"
				   android:layout_marginTop="10dp"
				   android:inputType="number" />
			<TextView
			       android:layout_width="0dp"
			       android:layout_weight=".04"
			       android:layout_height="50dp"
			       android:text="@string/outOf"
			   	   android:layout_marginRight="10dp"
			   	   android:layout_marginLeft="2dp"
			   	   android:layout_marginTop="10dp" 
			   	   android:textSize="30sp"/>
			<EditText
			    	android:id="@+id/bottomNumber"
			       android:layout_width="0dp"
			       android:layout_weight=".23"
			       android:layout_height="50dp"
				   android:layout_marginRight="2dp"
				   android:layout_marginLeft="2dp"
				   android:layout_marginTop="10dp"
				   android:inputType="number" />
			<Spinner
			      android:id="@+id/addCategory"
			      android:layout_width="0dp"
			      android:layout_height="50dp"
				  android:layout_weight=".5"
				  android:layout_marginRight="10dp"
				  android:layout_marginLeft="10dp" 
				  android:visibility="invisible"/>

		 </LinearLayout>
		 <!--  Buttons to submit the change or cancel. -->
		 <LinearLayout 
	     android:orientation="horizontal"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:id="@+id/buttonContainer"
	     android:layout_below="@id/valuesContainer"
	     android:paddingTop="10dp"
	     android:paddingBottom="10dp">
	     <Button
	       android:id="@+id/addGrade"
	       android:layout_width="0dp"
	       android:layout_weight=".5"
	       android:layout_height="40dp"
	       android:layout_marginRight="10dp"
		   android:layout_marginLeft="10dp" 
		   android:background="@drawable/button_item"
		   android:textColor="#FFF"
	       android:text="@string/addGradeButton" 
	       android:gravity="center"/>
	     <Button
	       android:id="@+id/cancelAddGrade"
	       android:layout_width="0dp"
	       android:layout_weight=".5"
	       android:textColor="#FFF"
	       android:layout_height="40dp"
	       android:layout_marginRight="10dp"
	       android:background="@drawable/button_item"
		   android:layout_marginLeft="10dp" 
	       android:text="@string/cancelAddGrade" 
	       android:gravity="center"/>
	 </LinearLayout>

    
</RelativeLayout>