<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:orientation="vertical" 
    tools:context=".GradeCalculatorActivity">
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:background="@drawable/grading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        
        >
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background= "#3D1308">

            <ImageView
                android:id="@+id/imgImage"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/what_if" />
             
        </LinearLayout>
	</android.support.v7.widget.CardView>
	
    
    <TextView
        android:id = "@+id/currentGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:text="@string/currentGrade" 
         android:textColor="#FFFFFF"
        />
    
    <EditText
        android:id="@+id/currentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="numberDecimal"
        android:textColor="#7e0000"
        android:background="#FFFFFF" 
        android:hint="0%">

    </EditText>

    <TextView
        android:id="@+id/whatWant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:text="@string/whatWant" />


    <EditText
        android:id="@+id/wantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#7e0000"
        android:inputType="numberDecimal"
        android:background="#FFFFFF" 
        android:hint="0%" />

    <TextView
        android:id="@+id/finalWorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:text="@string/finalWorth" />


    <EditText
        android:id="@+id/finalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="numberDecimal"
        android:textColor="#7e0000"
        android:background="#FFFFFF" 
        android:hint="0%" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <TextView
        android:id="@+id/whatNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:text="@string/whatNeed" />

    <EditText
        android:id="@+id/needText"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" 
        android:hint="0%" />

</LinearLayout>
